# mkdocs-liveedit

./: .gitignore  AGENTS.md  DESIGN.md  LICENSE  README.md  pyproject.toml
example/: mkdocs.yml
example/docs/: about.md  guide.md  index.md
src/mkdocs_liveedit/: api.py  plugin.py  sourcemap.py
src/mkdocs_liveedit/assets/: liveedit.css  liveedit.js
tests/: test_api.py  test_regressions.py  test_sourcemap.py
